@@ -44,5 +44,5 @@ void OPTIONS(struct server_struct *inst)
 	GHBuffer[SERVER_BUFFER_SIZE-1] = 0; // strnprintf does not null-delimit when full
 	setHeader_generic(inst,GHBuffer);
 	bufpos=printHeader(inst,1,Buffer,SEND_BUFFER_SIZE);
-	send(inst->sock,Buffer,bufpos,0);
+	send(inst->sock,Buffer,bufpos,SEND_FLAG);
 }
