@@ -2,6 +2,10 @@ Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- Applied a patch from Helc`Ainu to provide Linux port with thread
 	  pool support.
 	- Minor alterations to patch to fix race condition, and exit on flag
+	- Re-patched the patched patch (phew!) Helc provided me with some good
+	  advice on the mistakes I have made.
+	- After that, and resolving a possibly unnessesary sleep got a ~15%
+	  speedup!
 
 Tue Feb 13 2007 Daniel Walker <djwalker at users.sourceforge.net>
 	- Fixed some errors with parsing % in URLs
